<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_visiting"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_visiting" />
        <item
            android:id="@+id/nav_visited"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_visited" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_privacy_policy" />
        </menu>
    </item>

</menu>
